--- a/home.html
+++ b/home.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>RealizzaGranjaII</title>
-    <link rel="shortcut icon" href="./imagens/logoicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
-  <h1 class="top-container" >
+  <nav class="top-container" >
     Realizza<br>
     Granja Viana II
-  </h1>
+  </nav>
   <header class="header" id="myHeader">
-    <a id="titulo" href="index.html">
-        <img src="./imagens/Realizza Granja viana II.png" width="50px">
+    <a class="header" href="index.html">
+        <img id="img1" src="./imagens/icon2.png" width="50px" >
         Realizza Granja Viana II
     </a>
   </header>
