--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header" id="myHeader">
     <a>AVISOS</a>
-    <a>CUPONS</a>
+    <a>OFERTAS</a>
     <a>CONTATO</a>
     <img id="img1" src="./imagens/3.png">
   </header>
@@ -22,13 +22,34 @@
     </aside>
     <article class="welcomeText">
       <a>Por aqui você vai poder conferir os principais avisos e noticias do condominio e da região!</a><br>
-      <a>Você vai poder aproveitar cupons de descontos para suas compras online!</a><br>
+      <a>Você vai poder aproveitar ofertas para suas compras online!</a><br>
       <a>Faça sugestões, reclamações ou tire dúvidas rápido e fácil!</a>
     </article>
     <section class="homeMenu">
-      <aside class="menuText">TESTE</aside>
-      <aside class="menuText">TESTE</aside>
-      <aside class="menuText">TESTE</aside>
+      <aside class="menuText">
+        <b>CONTATO</b> <br>
+        <ul>
+          <li>Dê seugestões</li>
+          <li>Faça reclamações</li>
+          <li>Tire suas dúvidas com a ADM</li>
+        </ul>
+        <a class="button">Clique</a>
+      </aside>
+      <aside class="menuText">
+      <b>OFERTAS</b><br>
+        <p>Aproveite diversas promoções de anunciantes<br>
+        para fazer compras no conforto da sua casa!</p>
+        <a class="button" href="ofertas.html">Clique</a>
+      </aside>
+      <aside class="menuText">
+      <b>AVISOS</b>
+        <ul>
+          <li>Assembléias</li>
+          <li>Normas</li>
+          <li>Informações da região</li>
+        </ul>
+        <a class="button">Clique</a>
+      </aside>
     </section>
   </section>
   <!-- <script src="home.js"></script> -->
