--- a/home.html
+++ b/home.html
@@ -13,35 +13,35 @@
     <a>AVISOS</a>
     <a>OFERTAS</a>
     <a>CONTATO</a>
-    <img id="img1" src="./imagens/3.png">
+    <img id="img1" href="home.htlml" src="./imagens/3.png">
   </header>
-  <section class="homeSection">
-    <aside class="welcome">
+  <main class="homeSection">
+    <section class="welcome">
       <h1>Bem-vindo!</h1>
       <h1>Realizza Granja Viana II</h1>
-    </aside>
+    </section>
     <article class="welcomeText">
       <a>Por aqui você vai poder conferir os principais avisos e noticias do condominio e da região!</a><br>
       <a>Você vai poder aproveitar ofertas para suas compras online!</a><br>
       <a>Faça sugestões, reclamações ou tire dúvidas rápido e fácil!</a>
     </article>
-    <section class="homeMenu">
-      <aside class="menuText">
+    <nav class="homeMenu">
+      <section class="menuText">
         <b>CONTATO</b> <br>
         <ul>
           <li>Dê seugestões</li>
           <li>Faça reclamações</li>
           <li>Tire suas dúvidas com a ADM</li>
         </ul>
-        <a class="button">Clique</a>
-      </aside>
-      <aside class="menuText">
+        <a class="button" href="contato.html">Clique</a>
+      </section>
+      <section class="menuText">
       <b>OFERTAS</b><br>
         <p>Aproveite diversas promoções de anunciantes<br>
         para fazer compras no conforto da sua casa!</p>
         <a class="button" href="ofertas.html">Clique</a>
-      </aside>
-      <aside class="menuText">
+        </section>
+      <section class="menuText">
       <b>AVISOS</b>
         <ul>
           <li>Assembléias</li>
@@ -49,8 +49,8 @@
           <li>Informações da região</li>
         </ul>
         <a class="button">Clique</a>
-      </aside>
-    </section>
-  </section>
+      </section>
+    </nav>
+  </main>
   <!-- <script src="home.js"></script> -->
 </body>
