--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <a>AVISOS</a>
     <a>OFERTAS</a>
     <a>CONTATO</a>
-    <img id="img1" href="home.htlma"src="./imagens/3.png">
+    <img id="img1" href="home.htlm"src="./imagens/3.png">
   </header>
   <section class="homeSection">
     <aside class="welcome">
