--- a/home.html
+++ b/home.html
@@ -1,56 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+ 
 <head>
     <meta charset="UTF-8">
     <title>RealizzaGranjaII</title>
     <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="home.css">
 </head>
-
+ 
 <body>
   <header class="header" id="myHeader">
-    <a>AVISOS</a>
-    <a>OFERTAS</a>
-    <a>CONTATO</a>
-    <img id="img1" href="home.htlml" src="./imagens/3.png">
+    <h1>DESCONTOMINIO</h1>
+    <nav id="menu">
+    <ul>
+      <li><a>Inicio</a></li>
+      <li><a>Sobre</a></li>
+      <li><a>Cupons</a></li>
+    </ul>
+    </nav>
   </header>
   <main class="homeSection">
-    <section class="welcome">
-      <h1>Bem-vindo!</h1>
-      <h1>Realizza Granja Viana II</h1>
-    </section>
-    <article class="welcomeText">
-      <a>Por aqui você vai poder conferir os principais avisos e noticias do condominio e da região!</a><br>
-      <a>Você vai poder aproveitar ofertas para suas compras online!</a><br>
-      <a>Faça sugestões, reclamações ou tire dúvidas rápido e fácil!</a>
-    </article>
-    <nav class="homeMenu">
-      <section class="menuText">
-        <b>CONTATO</b> <br>
-        <ul>
-          <li>Dê seugestões</li>
-          <li>Faça reclamações</li>
-          <li>Tire suas dúvidas com a ADM</li>
-        </ul>
-        <a class="button" href="contato.html">Clique</a>
-      </section>
-      <section class="menuText">
-      <b>OFERTAS</b><br>
-        <p>Aproveite diversas promoções de anunciantes<br>
-        para fazer compras no conforto da sua casa!</p>
-        <a class="button" href="ofertas.html">Clique</a>
-        </section>
-      <section class="menuText">
-      <b>AVISOS</b>
-        <ul>
-          <li>Assembléias</li>
-          <li>Normas</li>
-          <li>Informações da região</li>
-        </ul>
-        <a class="button">Clique</a>
-      </section>
-    </nav>
+<section class="gallery">
+    <figure class="gallery__item gallery__item--1">
+      <img src="imagens/vivara_logo.jpeg" class="gallery_img">
+    </figure>
+    <figure class="gallery__item gallery__item--3">
+      <img src="imagens/Electrolux-Emblema.png" class="gallery_img">
+    </figure>
+    <figure class="gallery__item gallery__item--4">
+      <img src="imagens/7546cd151125507.6306515a5bec2.jpg" class="gallery_img">
+    </figure>
+    <figure class="gallery__item gallery__item--5">
+      <img src="imagens/renner-logo.jpg" class="gallery_img">
+    </figure>
+  </section>
+ 
+ 
   </main>
   <!-- <script src="home.js"></script> -->
 </body>
