alterações e inicio backend

--- a/home.html
+++ b/home.html
@@ -3,9 +3,10 @@
  
 <head>
     <meta charset="UTF-8">
-    <title>RealizzaGranjaII</title>
+    <title>DESCONTOMINIO</title>
     <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="home.css">
+    <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script></body>
 </head>
  
 <body>
@@ -13,14 +14,14 @@
     <h1>DESCONTOMINIO</h1>
     <nav id="menu">
     <ul>
-      <li><a>Inicio</a></li>
-      <li><a>Sobre</a></li>
-      <li><a>Cupons</a></li>
+      <li><a class="active" href="home.html">Inicio</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="acesse.html"> Acesse</a></li>
     </ul>
     </nav>
   </header>
   <main class="homeSection">
-<section class="gallery">
+  <section class="gallery">
     <figure class="gallery__item gallery__item--1">
       <img src="imagens/vivara_logo.jpeg" class="gallery_img">
     </figure>
@@ -34,8 +35,18 @@
       <img src="imagens/renner-logo.jpg" class="gallery_img">
     </figure>
   </section>
- 
- 
+  <article class="hometext">
+    Um portal para ter acesso a <i>descontos</i> e <i>ofertas</i> de grandes marcas,
+    comércios locais e prestadores de serviços! 
+  </article>
+  <section class="buttonmenu">
+    <button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button>
+    <button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button>
+  </section>
+  <footer class="footer">
+    <a class="footerText">Desenvolvido por Antonio Cardoso, O Tom.</a>
+    <nav class="footerMenu">
+    </nav>
+  </footer>
   </main>
-  <!-- <script src="home.js"></script> -->
-</body>
+ 
