--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>DESCONTOMINIO</title>
     <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="home.css">
-    <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script></body>
+    <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script>
 </head>
  
 <body>
@@ -29,24 +29,24 @@
       <img src="imagens/Electrolux-Emblema.png" class="gallery_img">
     </figure>
     <figure class="gallery__item gallery__item--4">
-      <img src="imagens/7546cd151125507.6306515a5bec2.jpg" class="gallery_img">
+      <img src="imagens/netshoes.jpg" class="gallery_img">
     </figure>
     <figure class="gallery__item gallery__item--5">
       <img src="imagens/renner-logo.jpg" class="gallery_img">
     </figure>
   </section>
   <article class="hometext">
-    Um portal para ter acesso a <i>descontos</i> e <i>ofertas</i> de grandes marcas,
+    Tranforme seu condominio em um portal de acesso a <i>descontos</i> e <i>ofertas</i> de grandes marcas,
     comércios locais e prestadores de serviços! 
   </article>
   <section class="buttonmenu">
-    <button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button>
+    <a href="sobre.html"><button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button></a>
     <button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button>
   </section>
   <footer class="footer">
-    <a class="footerText">Desenvolvido por Antonio Cardoso, O Tom.</a>
     <nav class="footerMenu">
+      <a class="footerText">Desenvolvido por Antonio Cardoso, O Tom.</a>
     </nav>
   </footer>
   </main>
- 
+</body>
