--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
     <title>DESCONTOMINIO</title>
     <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="sobre.css">
+    <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script>
 </head>
  
 <body>
@@ -22,20 +23,29 @@
   <main>
   <article class="hometext">
     O <i>DESCONTOMINIO</i>
-     é um portal para condominos terem acesso a cupons de descontos e ofertas
-    de grandes marcas e lojas do Brasil. São diversas categorias para que os moradores possam fazer
-    compras e estar antenado nas promoções de grandes marcas varejistas.   
+    é um serviço para condominos terem acesso a cupons de descontos e ofertas
+    de grandes marcas e lojas do Brasil junto com o comércio local!
+    Um beneficio para os condôminos e um negócio para o condomínio!
   </article>
-  <i class="slide">
-    <input checked type="radio" name="s" style="background-image: url('https://picsum.photos/500/300?random=1');" title="Random Picture 1">
-    <input type="radio" name="s" style="background-image: url('https://picsum.photos/500/300?random=2');" title="Random Picture 2">
-    <input type="radio" name="s" style="background-image: url('https://picsum.photos/500/300?random=3');" title="Random Picture 3">
-    <input type="radio" name="s" style="background-image: url('https://picsum.photos/500/300?random=4');" title="Random Picture 4">
-    <input type="radio" name="s" style="background-image: url('https://picsum.photos/500/300?random=5');" title="Random Picture 5">
-  </i>
+  <section class="slide">
+    <img  src="imagens/vivara_logo.jpeg" alt="submit" class="image" >
+    <img  src="imagens/netshoes.jpg" alt="submit" class="image" >
+    <img  src="imagens/renner-logo-6.png" alt="submit" class="image" >
+    <img  src="imagens/movida-logo.png" alt="submit" class="image" >
+  </section>
+  <section class="text">
+    <p><i>VANTAGENS</i><br>
+     - Descontos nas maiores marcas e varejistas online do Brasil.<br>
+     - Espaço de negócios para moradores<br>
+     - Monetize espaço publicitário e reforce o caixa!</p>
+     <div id="btntext">
+      <a href="sobre.html"><button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button></a>
+      <button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button>
+    </div>
+  </section>
   <footer class="footer">
-    <a class="footerText">Desenvolvido por Antonio Cardoso, O Tom.</a>
     <nav class="footerMenu">
+      <a class="footerText">Desenvolvido por Antonio Cardoso, O Tom.</a>
     </nav>
   </footer>
   </main>
