Adicionando página Acesse e refazendo

--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
     <ul>
       <li><a  href="home.html">Inicio</a></li>
       <li><a class="active" href="sobre.html">Sobre</a></li>
-      <li><a>Acesse</a></li>
+      <li><a href="acesse.html"> Acesse</a></li>
     </ul>
     </nav>
   </header>
