--- a/acesse.html
+++ b/acesse.html
@@ -19,22 +19,14 @@
     </ul>
     </nav>
   </header>
-  <form method="post" action="" class="login">
-    <h2>Login</h2>
-      <label for="nome_login">Seu nome</label>
-      <input id="nome_login" name="nome_login" required="required" type="text" placeholder="ex. contato@htmlecsspro.com"/>
-     
-      <label for="email_login">Seu e-mail</label>
-      <input id="email_login" name="email_login" required="required" type="password" placeholder="ex. senha" />
- 
-      <input type="checkbox" name="manterlogado" id="manterlogado" value="" />
-      <label for="manterlogado">Manter-me logado</label>
- 
-      <input type="submit" value="Logar" />
- 
-    <p class="link">
-      Ainda não tem conta?
-      <a href="#paracadastro">Cadastre-se</a>
-    </p>
-  </form>
+  <article class="contato">
+    Aproveite os descontos de até 15% com nossas parcerias!<br> Entre em contato e saiba mais!
+  </article>
+ <section class="ofertas">
+  <img  src="imagens/vivara_logo.jpeg" alt="submit" class="image" >
+  <img  src="imagens/netshoes.jpg" alt="submit" class="image" >
+  <img  src="imagens/renner-logo-6.png" alt="submit" class="image" >
+  <img  src="imagens/movida-logo.png" alt="submit" class="image" >
+ </section>
+
 </body>
