--- a/acesse.html
+++ b/acesse.html
@@ -6,6 +6,7 @@
     <title>DESCONTOMINIO</title>
     <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
     <link rel="stylesheet" href="acesse.css">
+    <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script>
 </head>
  
 <body>
@@ -28,5 +29,14 @@
   <img  src="imagens/renner-logo-6.png" alt="submit" class="image" >
   <img  src="imagens/movida-logo.png" alt="submit" class="image" >
  </section>
-
+ <section class="text">
+  <p><i>VANTAGENS</i><br>
+   - Descontos nas maiores marcas e varejistas online do Brasil.<br>
+   - Espaço de negócios para moradores<br>
+   - Monetize espaço publicitário e reforce o caixa!</p>
+   <div id="btntext">
+    <a href="https://wa.me/5511960330255?text=Mensagem+de+teste%21"><button class="button"><i class="fa-solid fa-phone"></i> Contato </button></a>
+    <a href="sobre.html"><button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button></a>
+  </div>
+</section>
 </body>
