--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
   </article>
   <section class="buttonmenu">
     <a href="sobre.html"><button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button></a>
-    <button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button>
+    <a href="acesse.html"><button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button></a>
   </section>
   <footer class="footer">
     <nav class="footerMenu">
