--- a/sobre.html
+++ b/sobre.html
@@ -39,8 +39,8 @@
      - Espaço de negócios para moradores<br>
      - Monetize espaço publicitário e reforce o caixa!</p>
      <div id="btntext">
-      <a href="sobre.html"><button class="button"><i class="fa-solid fa-circle-info"></i> Saiba mais </button></a>
-      <button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button>
+      <a href="https://wa.me/5511960330255?text=Mensagem+de+teste%21"><button class="button"><i class="fa-solid fa-phone"></i> Contato </button></a>
+      <a href="acesse.html"><button class="button"> <i class="fa-solid fa-money-check-dollar"></i> Ofertas </button></a>
     </div>
   </section>
   <footer class="footer">
