--- a/acesse.html
+++ b/acesse.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DESCONTOMINIO</title>
-    <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./imagens/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="acesse.css">
     <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script>
 </head>
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <article class="contato">
-    Aproveite os descontos de até 15% com nossas parcerias!<br> Entre em contato e saiba mais!
+    Aproveite os descontos com nossas parcerias!<br> Entre em contato e saiba mais!
   </article>
  <section class="ofertas">
   <img  src="imagens/vivara_logo.jpeg" alt="submit" class="image" >
