--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>DESCONTOMINIO</title>
-    <link rel="shortcut icon" href="./imagens/Realizza Granja viana II.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./imagens/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/ceb3c1690c.js" crossorigin="anonymous"></script>
 </head>
